--- a/index.html
+++ b/index.html
@@ -39,27 +39,7 @@
         </header>
 
         <div id="gallery" class="gallery">
-            <!-- ======================
-                Gallery markup: 
-
-                You can use the commented out markup below as a template
-                for each of your Gallery items, but you must use JS to 
-                create and append them to the `gallery` div.
-
-                IMPORTANT: Altering the arrangement of the markup and the 
-                attributes used may break the styles or functionality.
-
-                <div class="card">
-                    <div class="card-img-container">
-                        <img class="card-img" src="https://placehold.it/90x90" alt="profile picture">
-                    </div>
-                    <div class="card-info-container">
-                        <h3 id="name" class="card-name cap">first last</h3>
-                        <p class="card-text">email</p>
-                        <p class="card-text cap">city, state</p>
-                    </div>
-                </div>
-            ======================= -->              
+                         
         </div>
 
         <!-- =======================
@@ -96,6 +76,7 @@
         ======================== -->
 
         <!-- Add your JS here -->
-        <script src="js/script.js"></script>
+        <script type="text/javascript" src="js/cards.js"></script>
+        <script type="text/javascript" src="js/script.js"></script>
     </body>
 </html>
